src/test/deca/codegen/valid/objet/exPoly.deca
class A {

    int x;

    int getX() {
        return x;
    }

    void setX(int x) {
        this.x = x;
    }
}

{
    A a = new A();
    a.setX(1);
    println("x vaut : ", a.getX());
}
