src/test/deca/codegen/invalid/objet/ClassSameFiledParam.deca
class A{
    int x;
    void setX(int x){
    	this.x = x;
    }

}